examples/bad/ERROR_AMBIGUOUS_VARIANT_TYPE/ambiguous-variant-type-2.stella
language core;

extend with #variants;
extend with #type-ascriptions;
extend with #pairs;

fn main(n : Nat) -> Nat {
  return {<| value = n |>, 0}.2
}

//ERROR_AMBIGUOUS_VARIANT_TYPE
